# enterprise-adversarial-ml-governance

./: .gitignore  Executive_Deployment_Report_Phase5.md  HTTPS_SETUP.md  LTS_MANIFEST.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_REPORT_BOOLEAN_BYPASS.md  api_enterprise.py  api_simple_test.py  check_phase5.py  comprehensive_security_test.py  demonstrate_phase5.py  fix_model.py  generate_phase3_certificate.py  index.html  launch_phase5.bat  quick_test.py  requirements.txt  security_audit_report.py  security_verification_tests.py  setup_postgresql.py  test_epsilon_validation.py  validate_clean_accuracy.py  verify_phase5.py  verify_security_controls.py
.github/ISSUE_TEMPLATE/: security_gradient_sidechannel.md
.github/workflows/: security-ci.yml  slsa-provenance.yml
Enterprise_Adversarial_ML_Governance_Engine_v5.0_LTS/: README.md  api_enterprise.py  pyproject.toml  requirements.txt
Enterprise_Adversarial_ML_Governance_Engine_v5.0_LTS/autonomous/: launch.bat
Enterprise_Adversarial_ML_Governance_Engine_v5.0_LTS/autonomous/core/: autonomous_core.py  compatibility.py  ecosystem_authority.py  ecosystem_authority_fixed.py  ecosystem_engine.py
Enterprise_Adversarial_ML_Governance_Engine_v5.0_LTS/database/: config.py  connection.py  init_database.py
Enterprise_Adversarial_ML_Governance_Engine_v5.0_LTS/database/mock/: minimal_mock.py
Enterprise_Adversarial_ML_Governance_Engine_v5.0_LTS/database/models/: autonomous_decisions.py  deployment_identity.py  operator_interactions.py  policy_versions.py  system_health_history.py
Enterprise_Adversarial_ML_Governance_Engine_v5.0_LTS/models/base/: fashion_cnn.py  mnist_cnn.py
Enterprise_Adversarial_ML_Governance_Engine_v5.0_LTS/models/pretrained/: model_card.json
api/: main.py
archive_before_phase5_20260112_153116/: CLEANUP_REPORT.md  ENTERPRISE_PLATFORM_SUCCESS_REPORT.json  autonomous_core.py  autonomous_integration.py  autonomous_platform_ascii.py  autonomous_test_results.json  check_deps_fixed.py  check_status.py  create_final_platform.py  enterprise_platform.py  enterprise_platform.py.backup_autonomous  enterprise_platform_fixed.py  fix_autonomous_integration.py  integrate_autonomous_into_platform.py  platform_selector.bat  platform_selector.ps1  requirements_clean.txt  run_autonomous_server.py  start_autonomous.bat  start_enterprise.bat  start_enterprise.sh  start_platform.bat  start_platform.ps1  verify_fixed_platform.py  verify_installation.py  verify_platform.py  verify_platform_simple.py
attacks/: __init__.py  cw.py  deepfool.py  fgsm.py  pgd.py
autonomous/core/: database_engine.py  ecosystem_authority.py
autonomous/platform/: main.py
ci/gates/: robustness_gate.py  robustness_thresholds.yaml
config/: attack_config.yaml  defense_config.yaml  eval_config.yaml  minimal_attack_config.yaml  rate_limits.json  reference_distribution.npy  training_config.yaml
database/: config.py  connection.py  init_database.py  sqlite_engine.py
database/models/: base.py  deployment_identity.py  model_registry.py  policy_versions.py  security_memory.py
datasets/: __init__.py  dataset_registry.py  fashion_mnist.py  mnist.py
defenses/: __init__.py  adv_training.py  input_smoothing.py  model_wrappers.py  randomized_transform.py  robust_loss.py  trades_lite.py
deployment/: Dockerfile  docker-compose.yml
firewall/: detector.py
governance/compliance/: audit_logger.py  gdpr_compliance.py
governance/compliance/evidence/: README.md
governance/compliance/gdpr/: dpa_registry.json  pia_registry.json  security_measures.json
governance/compliance/gdpr/dpa/: DPA-20260505-001.json  DPA-20260505-002.json
governance/compliance/gdpr/encryption_keys/: pseudonym_mappings.jsonl
governance/compliance/gdpr/pia/: PIA-20260505-001.json  PIA-20260505-002.json
intelligence/: ecosystem_authority.py
intelligence/telemetry/: attack_monitor.py  telemetry.json  telemetry_20260112.jsonl
models/: __init__.py  registry.json
models/pretrained/: mnist_cnn.json
models/registry/: model_router.py
models/vision/vision_MNISTCNN_v1.0.0/: metadata.json
notebooks/: 01_data_exploration.py
pipelines/: attack_transfer.py  cross_dataset_eval.py  defense_train.py  export_report.py  generate_adversarial.py  robustness_benchmark.py  robustness_eval.py  train_model.py
reports/: platform_status.json
reports/certificates/: phase3_completion_20260110_230611.json  phase3_completion_20260111_000712.json  phase3_completion_20260111_001032.json  phase3_completion_20260111_001205.json  phase3_completion_20260111_161538.json  phase3_summary_20260111_000712.txt
reports/enterprise_summary/: full_results.json  report.html  security_assessment.md
reports/phase2_test_results/: phase2_test_report_20260110_174947.json
reports/phase3_tests/: week1_test_20260110_200945.json
reports/robustness_kpis/: attack_comparison.json  comparison_table.md
reports/transferability/simple_test/: transfer_results.json
reports/verification/: final_enterprise_verification.json  final_verification_20260111_161824.json  integration_test.json
scripts/: validate_parameters.py  verify_slsa_level3.sh
utils/: attack_wrappers.py  dataset_utils.py  json_utils.py  logging_utils.py  model_loader.py  model_utils.py  visualization.py
